tab issue and stepper alignment

--- a/src/app/learner/pages/coursedetails/coursedetails.component.scss
+++ b/src/app/learner/pages/coursedetails/coursedetails.component.scss
@@ -758,6 +758,10 @@ iframe.fullScreen {
     }
 
 }
+:host ::ng-deep .mat-stepper-vertical-line::before {
+    position: absolute !important;
+    left: 4px !important;
+}
 
 :host ::ng-deep .mat-step-header {
     margin-left: 0.8% !important;
